[tool.poetry]
name = "aolab.lan.agent"
version = "0.1.0"
description = "I1820 python client (based on LAN protocol and Aolab Model) from good days of the AoLab"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
